--- a/client/src/components/login/login.styles.scss
+++ b/client/src/components/login/login.styles.scss
@@ -1,5 +1,4 @@
 .Login {
-  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +21,7 @@
     }
 
     .login-box {
-      height: 30vh;
+      height: 300px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -31,6 +30,7 @@
       &-inputs {
         height: 40vh;
         display: flex;
+        align-items: center;
         flex-direction: column;
         justify-content: space-around;
       }
