--- a/client/src/components/home/home.styles.scss
+++ b/client/src/components/home/home.styles.scss
@@ -65,6 +65,7 @@
             .accounts-gallery {
                 padding: 5vmin;
                 display: flex;
+                position: relative;
                 align-items: flex-start;
                 align-content: flex-start;
                 flex-wrap: wrap;
