--- a/client/src/components/home/home.styles.mobile.scss
+++ b/client/src/components/home/home.styles.mobile.scss
@@ -8,7 +8,7 @@
             display: flex;
             flex-direction: column-reverse;
             
-            .toolbar {
+            .left-toolbar {
                 align-items: center;
                 width: 100vw;
                 height: 20vh;
