Add display button to CreateAccount component

--- a/client/src/components/home/components/createAccount/create-account.styles.scss
+++ b/client/src/components/home/components/createAccount/create-account.styles.scss
@@ -51,6 +51,15 @@
             box-shadow: 0 0 0.5vmin black;
           }
         }
+
+        .display-icons-button {
+          font-size: 4vmin;
+          position: absolute;
+          right: 13vmin;
+          top: 3vmin;
+          color: #B94444;
+          cursor: pointer;
+        }
   
         .password-details {
           border-radius: 0 0 2vmin 2vmin;
