--- a/client/src/components/home/components/createAccount/components/accountIcons/accountIcons.styles.scss
+++ b/client/src/components/home/components/createAccount/components/accountIcons/accountIcons.styles.scss
@@ -1,5 +1,6 @@
 .Account-icons {
   position: absolute;
+  overflow-y: auto;
   left: 0;
   top: 0;
   background: #FAE9A4;
@@ -10,20 +11,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 2vmin 2vmin 0 0;
+
+  .account-icons-title {
+    padding: 2vmin;
+  }
   
   .account-icons-box {
+    margin-bottom: 2vmin;
     display: flex;
     flex-direction: column;
-    background: pink;
-    height: 85vmin;
-    overflow-y: auto;
     display: flex;
     width: 62vmin;
-
-    .account-icons-name {
-      text-decoration: underline;
-      line-height: 6vmin;
-    }
     
     .account-gallery {
       display: flex;
