--- a/client/src/components/home/components/account/account.styles.scss
+++ b/client/src/components/home/components/account/account.styles.scss
@@ -1,12 +1,14 @@
 .account {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 2vmin;
   background: rgba(255, 217, 45, 0.4);
   border-radius: 2vmin;
   border: 0.3vmin solid rgb(219, 201, 99);
   box-shadow: 0 0 0.5vmin black;
+  min-height: 180px;
 
   &-names {
     display: flex;
@@ -14,22 +16,22 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    height: 10vh;
 
     .account-name {
-      font-size: 4vmin;
+      font-size: 40px;
     }
 
     .account-subname {
-      font-size: 2vmin;
+      font-size: 20px;
     }
   }
 
-  &-names:hover .account-name {
-    font-weight: bold;
+  &-names:hover {
+    text-shadow: 0 0 0.5vmin #b944446e;
   }
 
   &-more {
+    margin-top: 3vmin;
     display: none;
     flex-direction: column;
     justify-content: space-around;
