Add z-index to CreateAccount component to get it to the front of the page

--- a/client/src/components/home/components/createAccount/create-account.styles.scss
+++ b/client/src/components/home/components/createAccount/create-account.styles.scss
@@ -6,6 +6,7 @@
   height: 93vh;
   display: flex;
   justify-content: center;
+  z-index: 10000;
 
   .create-account-background {
     margin-top: 2vh;
