Add style to Navbar component

--- a/client/src/components/navbar/navbar.styles.mobile.scss
+++ b/client/src/components/navbar/navbar.styles.mobile.scss
@@ -8,6 +8,10 @@
       .react-home-icon {
         font-size: 8vmin;
       }
+
+      .user-email {
+        display: none;
+      }
     }
   }
 }
