--- a/client/src/components/home/home.styles.scss
+++ b/client/src/components/home/home.styles.scss
@@ -36,11 +36,15 @@
     .accounts-area {
       width: 95vw;
       background: rgb(246, 242, 242);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       .accounts-top-toolbar {
         border-bottom: 0.5vmin rgba(0, 0, 0, 0.1) solid;
         display: flex;
         justify-content: center;
+        width: 100%;
 
         .search-account {
           position: relative;
