:bug: Fix position of CreateAccount component when appears

--- a/client/src/components/home/components/createAccount/create-account.styles.mobile.scss
+++ b/client/src/components/home/components/createAccount/create-account.styles.mobile.scss
@@ -12,7 +12,7 @@
 
       @keyframes create-account-animation {
         to {
-          transform: translateY(29vh);
+          transform: translateY(275px);
         }
       }
 
