--- a/client/src/components/home/home.styles.mobile.scss
+++ b/client/src/components/home/home.styles.mobile.scss
@@ -24,6 +24,10 @@
           font-size: 20vmin;
         }
 
+        .create-account-icon:hover {
+          font-size: 20vmin;
+        }
+
         .follow-me {
             position: absolute;
             bottom: 5vmin;
