--- a/client/src/components/home/home.styles.scss
+++ b/client/src/components/home/home.styles.scss
@@ -81,7 +81,7 @@
         flex-wrap: wrap;
         gap: 2vmin;
         height: 82vh;
-        overflow: auto;
+        overflow-y: auto;
       }
     }
   }
